...
        <ImageView
            android:id="@+id/launch_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/launch_logo_description"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <Button
...
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/upcoming_elections"
            android:text="@string/upcoming_elections"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/representative_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/representative_button"
            android:layout_width="0dp"
...
