...
            android:onClick="@{()->viewModel.searchForMyRepresentatives()}"
            android:text="@string/find_my_representatives"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimary"
            android:text="@string/use_my_location"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/button_search" />
...
            android:gravity="center_vertical"
            android:text="@string/my_representatives_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_recycler"
            representativeData="@{viewModel.representatives}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
